[project]
name = "pdf-stego"
version = "0.1.0"
description = "PDF Steganography — Structure-based watermarking (Jiang et al., 2024)"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
    # Prevent accidentally publishing private code to PyPI.
    "Private :: Do Not Upload",
]
dependencies = [
    "click==8.3.2",
    "cryptography==46.0.7",
    "pikepdf==10.5.1",
]

[project.scripts]
pdf-stego = "pdf_stego.cli:cli"

[dependency-groups]
nox = [
    "nox-uv==0.7.1",
]
test = [
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
    "pytest-randomly==4.0.1",
]
type_check = [
    "mypy==1.20.0",
]
lint = [
    "ruff==0.15.10",
]

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[tool.uv]
default-groups = "all"

[tool.mypy]
ignore_missing_imports = true
strict = true
enable_error_code = ["deprecated", "exhaustive-match", "explicit-override"]

[tool.ruff]
line-length = 99
src = ["src"]

[tool.ruff.lint]
select = [
    "F",   # pyflakes
    "E",   # pycodestyle
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "RUF", # ruff
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "ISC", # flake8-implicit-str-concat
    "PIE", # flake8-pie
    "PT",  # flake8-pytest-style
    "PTH", # flake8-use-pathlib
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
    "DTZ",  # flake8-datetimez
    "PL",   # Pylint
    "S",    # Bandit
]
extend-ignore = [
    "RUF005",
    "RUF012",
    "PLR0913",
    "PLR2004",
]
unfixable = [
    # Don't remove unused imports automatically — editors may delete them mid-edit.
    "F401",
]

[tool.ruff.lint.isort]
force-sort-within-sections = true
split-on-trailing-comma = false

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "PLR2004"]


[tool.pytest.ini_options]
addopts = [
    "--strict-config",
    "--strict-markers",
]
xfail_strict = true
filterwarnings = [
    "error",
]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_also = [
    "case _ as unreachable",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
]
